@@ -40,8 +40,8 @@ int vips__png_read( const char *name, VipsImage *out );
 int vips__png_ispng( const char *filename );
 gboolean vips__png_isinterlaced( const char *filename );
 extern const char *vips__png_suffs[];
-int vips__png_read_buffer( VipsImage *out, char *buffer, size_t length  );
-int vips__png_header_buffer( VipsImage *out, char *buffer, size_t length );
+int vips__png_read_buffer( char *buffer, size_t length, VipsImage *out  );
+int vips__png_header_buffer( char *buffer, size_t length, VipsImage *out );
 
 int vips__png_write( VipsImage *in, const char *filename, 
 	int compress, int interlace );
