@@ -5,6 +5,7 @@
 - add im_vips2dz(): run the deepzoom writer from vips7
 - vips_magickload() has an option to read all images in a sequence
 - redo im_make_xy(), im_*eye(), im_zone*(), im_sines() as classes
+- added vips_pngload_buffer()
 
 12/3/13 started 7.33.0
 - vipsthumbnail lets you specify the sharpening mask
